Fixed spacing on nested lists.

--- a/css/main.scss
+++ b/css/main.scss
@@ -189,3 +189,7 @@ footer {
         padding: 0;
     }
 }
+
+.notes {
+    ul ul { margin: 0; }
+}
